// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousLeavesOtherReasonDetails when the user has no previous leaves reported renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your previous leave
  </Heading>
  <RepeatableFieldset
    addButtonLabel="Add another previous leave"
    entries={
      Array [
        PreviousLeave {
          "is_for_current_employer": null,
          "is_for_same_reason_as_leave_reason": null,
          "leave_end_date": null,
          "leave_minutes": null,
          "leave_reason": null,
          "leave_start_date": null,
          "previous_leave_id": null,
          "worked_per_week_minutes": null,
        },
      ]
    }
    headingPrefix="Previous leave"
    limit={6}
    limitMessage="You can only add up to 6 leaves"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove this previous leave"
    render={[Function]}
  />
</QuestionPage>
`;

exports[`PreviousLeavesOtherReasonDetails when user's claim has previous leaves renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your previous leave
  </Heading>
  <RepeatableFieldset
    addButtonLabel="Add another previous leave"
    entries={
      Array [
        PreviousLeave {
          "is_for_current_employer": null,
          "is_for_same_reason_as_leave_reason": null,
          "leave_end_date": "2021-01-26",
          "leave_minutes": 1500,
          "leave_reason": "Care for a family member",
          "leave_start_date": "2021-01-01",
          "previous_leave_id": 89,
          "worked_per_week_minutes": 2400,
        },
        PreviousLeave {
          "is_for_current_employer": null,
          "is_for_same_reason_as_leave_reason": null,
          "leave_end_date": "2020-12-13",
          "leave_minutes": 1200,
          "leave_reason": "Child bonding",
          "leave_start_date": "2020-11-21",
          "previous_leave_id": 9,
          "worked_per_week_minutes": 2400,
        },
      ]
    }
    headingPrefix="Previous leave"
    limit={6}
    limitMessage="You can only add up to 6 leaves"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove this previous leave"
    render={[Function]}
  />
</QuestionPage>
`;
